switch to systemd and add svn

--- a/configs/ibb_gateway_debian_testing_armhf.conf
+++ b/configs/ibb_gateway_debian_testing_armhf.conf
@@ -13,13 +13,13 @@ deb_codename="jessie"
 deb_arch="armhf"
 deb_include="linux-base initramfs-tools systemd acpid avahi-daemon \
 bash-completion bsdmainutils ca-certificates cpufrequtils ntp dosfstools \
-fbset file git-core hdparm hexedit i2c-tools \
+fbset file git-core subversion hdparm i2c-tools \
 locales openssh-server patch wget \
 sudo usb-modeswitch usbutils unzip \
 \
 apache2 php5 php5-json \
 owserver owhttpd bluez rrdtool"
-deb_exclude="aptitude aptitude-common python wpasupplicant"
+deb_exclude="aptitude aptitude-common python2.7 wpasupplicant ofono"
 deb_components="main contrib non-free"
 deb_mirror=""
 ##
@@ -38,9 +38,23 @@ rfs_startup_scripts="enable"
 rfs_opt_scripts="https://github.com/RobertCNelson/boot-scripts"
 rfs_default_locale="de_DE.UTF-8"
 rfs_etc_dogtag="ing-budde.de IBB Gateway Debian Image"
-rfs_console_banner="Support/FAQ: http://www.ing-budde.de"
+rfs_console_banner="\n\
+ ## ######  ######\n\
+ ##      ##      ##\n\
+ ##      ##      ##\n\
+ ## ######  ######\n\
+ ##      ##      ##\n\
+ ##      ##      ##\n\
+ ## ######  ######    Ingenieurbüro Budde 2015 (www.ing-budde.de)"
 rfs_console_user_pass="enable"
-rfs_ssh_banner="Support/FAQ: http://www.ing-budde.de"
+rfs_ssh_banner="\n\
+ ## ######  ######\n\
+ ##      ##      ##\n\
+ ##      ##      ##\n\
+ ## ######  ######\n\
+ ##      ##      ##\n\
+ ##      ##      ##\n\
+ ## ######  ######    Ingenieurbüro Budde 2015 (www.ing-budde.de)"
 rfs_ssh_user_pass="enable"
 ##
 ##enable kernel repo: http://repos.rcn-ee.net/(debian|ubuntu)
