add rsync as it is required by bbb-flasher func

--- a/configs/ibb_gateway_debian_testing_armhf.conf
+++ b/configs/ibb_gateway_debian_testing_armhf.conf
@@ -12,7 +12,7 @@ deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
 deb_include="linux-base initramfs-tools systemd acpid avahi-daemon \
-bash-completion bsdmainutils ca-certificates cpufrequtils ntp dosfstools \
+bash-completion bsdmainutils ca-certificates cpufrequtils ntp dosfstools rsync \
 fbset file git-core subversion hdparm i2c-tools \
 locales openssh-server patch wget \
 sudo usb-modeswitch usbutils unzip \
