--- a/configs/ibb_gateway_debian_testing_armhf.conf
+++ b/configs/ibb_gateway_debian_testing_armhf.conf
@@ -38,23 +38,21 @@ rfs_startup_scripts="enable"
 rfs_opt_scripts="https://github.com/RobertCNelson/boot-scripts"
 rfs_default_locale="de_DE.UTF-8"
 rfs_etc_dogtag="ing-budde.de IBB Gateway Debian Image"
-rfs_console_banner="\n\
- ## ######  ######\n\
- ##      ##      ##\n\
- ##      ##      ##\n\
- ## ######  ######\n\
- ##      ##      ##\n\
- ##      ##      ##\n\
- ## ######  ######    Ingenieurbüro Budde 2015 (www.ing-budde.de)"
+rfs_console_banner="\
+## ######  ######\n\
+##      ##      ##\n\
+##      ##      ##\n\
+## ######  ######\n\
+##      ##      ##\n\
+##      ##      ##\n\
+## ######  ######   Home-Automation Gateway\n\
+\n\
+Ingenieurbüro Budde 2015 (www.ing-budde.de)"
 rfs_console_user_pass="enable"
-rfs_ssh_banner="\n\
- ## ######  ######\n\
- ##      ##      ##\n\
- ##      ##      ##\n\
- ## ######  ######\n\
- ##      ##      ##\n\
- ##      ##      ##\n\
- ## ######  ######    Ingenieurbüro Budde 2015 (www.ing-budde.de)"
+rfs_ssh_banner="\
+IBB Home-Automation Gateway\n\
+\n\
+Ingenieurbuero Budde 2015 (www.ing-budde.de)"
 rfs_ssh_user_pass="enable"
 ##
 ##enable kernel repo: http://repos.rcn-ee.net/(debian|ubuntu)
