yet another banners update

--- a/configs/ibb_gateway_debian_testing_armhf.conf
+++ b/configs/ibb_gateway_debian_testing_armhf.conf
@@ -50,9 +50,15 @@ rfs_console_banner="\
 Ingenieurbüro Budde 2015 (www.ing-budde.de)"
 rfs_console_user_pass="enable"
 rfs_ssh_banner="\
-IBB Home-Automation Gateway\n\
+  ## ######  ######\n\
+  ##      ##      ##\n\
+  ##      ##      ##\n\
+  ## ######  ######\n\
+  ##      ##      ##\n\
+  ##      ##      ##\n\
+  ## ######  ######   Home-Automation Gateway\n\
 \n\
-Ingenieurbuero Budde 2015 (www.ing-budde.de)"
+Ingenieurbüro Budde 2015 (www.ing-budde.de)"
 rfs_ssh_user_pass="enable"
 ##
 ##enable kernel repo: http://repos.rcn-ee.net/(debian|ubuntu)
@@ -61,10 +67,8 @@ repo_rcnee_pkg_list="connman rcn-ee-archive-keyring tiomapconf"
 
 rfs_kernel="http://www.ing-budde.de/downloads/kernel/"
 #include_firmware="enable" - only wlan-stick fw!
-#
+
 chroot_COPY_SETUP_SDCARD="enable"
 chroot_tarball="enable"
-chroot_before_hook=""
-chroot_after_hook=""
 chroot_script="ibb.sh"
 
