--- a/configs/ibb_gateway_debian_jessie_armhf.conf
+++ b/configs/ibb_gateway_debian_jessie_armhf.conf
@@ -1,5 +1,5 @@
 ##
-release="jessie"
+release="8.2"
 image_type="ibb"
 ##
 ##Debootstrap: https://wiki.debian.org/Debootstrap
@@ -11,13 +11,14 @@ image_type="ibb"
 deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
-deb_include="linux-base initramfs-tools systemd acpid avahi-daemon \
-bash-completion bsdmainutils ca-certificates cpufrequtils ntp dosfstools rsync \
-fbset file git-core subversion hdparm i2c-tools \
-locales openssh-server patch wget \
-sudo usb-modeswitch usbutils unzip \
+deb_include="acpid apache2 avahi-daemon \
+bash-completion bsdmainutils ca-certificates cpufrequtils dosfstools \
+fbset file git-core hdparm i2c-tools initramfs-tools linux-base \
+locales openssh-server patch \
+rsync sudo systemd usb-modeswitch usbutils wget \
 \
-apache2 php5 php5-json \
+subversion ntp unzip \
+php5 php5-json \
 owserver owhttpd bluez rrdtool"
 deb_exclude="aptitude aptitude-common python2.7 wpasupplicant ofono"
 deb_components="main contrib non-free"
@@ -63,12 +64,17 @@ rfs_ssh_user_pass="enable"
 ##
 ##enable kernel repo: http://repos.rcn-ee.net/(debian|ubuntu)
 repo_rcnee="enable"
-repo_rcnee_pkg_list="connman rcn-ee-archive-keyring tiomapconf"
-
-rfs_kernel="http://www.ing-budde.de/downloads/kernel/"
-#include_firmware="enable" - only wlan-stick fw!
-
+repo_rcnee_pkg_list="linux-image-4.2.3-armv7-x2 linux-image-4.1.10-ti-r21 \
+bb-customizations \
+ipumm-dra7xx-installer vpdma-dra7xx-installer connman rcn-ee-archive-keyring tiomapconf"
+repo_rcnee_pkg_version="4.1.10-ti-r21"
+include_firmware="enable"
+#
+#rfs_kernel="http://www.ing-budde.de/downloads/kernel/"
 chroot_COPY_SETUP_SDCARD="enable"
-chroot_tarball="enable"
+chroot_before_hook=""
+chroot_after_hook=""
 chroot_script="ibb.sh"
+chroot_post_uenv_txt=""
+chroot_tarball="enable"
 
