--- a/configs/ibb_gateway_debian_jessie_armhf.conf
+++ b/configs/ibb_gateway_debian_jessie_armhf.conf
@@ -15,12 +15,12 @@ deb_include="acpid apache2 avahi-daemon \
 bash-completion bsdmainutils ca-certificates cpufrequtils dosfstools \
 fbset file git-core hdparm i2c-tools initramfs-tools linux-base \
 locales openssh-server patch \
-rsync sudo systemd usb-modeswitch usbutils wget \
+rsync sudo systemd usb-modeswitch usbutils wget udhcpd \
 \
 subversion ntp unzip \
 php5 php5-json \
 owserver owhttpd bluez rrdtool"
-deb_exclude="aptitude aptitude-common python2.7 wpasupplicant ofono"
+deb_exclude="aptitude aptitude-common"
 deb_components="main contrib non-free"
 deb_mirror=""
 ##
@@ -64,9 +64,8 @@ rfs_ssh_user_pass="enable"
 ##
 ##enable kernel repo: http://repos.rcn-ee.net/(debian|ubuntu)
 repo_rcnee="enable"
-repo_rcnee_pkg_list="linux-image-4.2.3-armv7-x2 linux-image-4.1.10-ti-r22 \
-bb-customizations \
-ipumm-dra7xx-installer vpdma-dra7xx-installer connman rcn-ee-archive-keyring tiomapconf"
+repo_rcnee_pkg_list="linux-image-4.1.10-ti-r22 \
+bb-customizations ipumm-dra7xx-installer vpdma-dra7xx-installer rcn-ee-archive-keyring tiomapconf"
 repo_rcnee_pkg_version="4.1.10-ti-r22"
 include_firmware="enable"
 #
