remove subversion as no one uses it anymore

--- a/configs/ibb_gateway_debian_jessie_armhf.conf
+++ b/configs/ibb_gateway_debian_jessie_armhf.conf
@@ -17,7 +17,7 @@ fbset file git-core hdparm i2c-tools initramfs-tools linux-base \
 locales openssh-server patch \
 rsync sudo systemd usb-modeswitch usbutils wget udhcpd \
 \
-subversion ntp unzip cdbs debhelper autotools-dev autoconf automake libtool pkg-config libsystemd-daemon-dev dh-systemd \
+ntp unzip cdbs debhelper autotools-dev autoconf automake libtool pkg-config libsystemd-daemon-dev dh-systemd \
 php5 php5-json \
 owserver owhttpd bluez rrdtool"
 deb_exclude="aptitude aptitude-common"
