--- a/configs/ibb_gateway_debian_jessie_armhf.conf
+++ b/configs/ibb_gateway_debian_jessie_armhf.conf
@@ -1,5 +1,5 @@
 ##
-release="8.2"
+release="8.4"
 image_type="ibb"
 ##
 ##Debootstrap: https://wiki.debian.org/Debootstrap
@@ -11,25 +11,77 @@ image_type="ibb"
 deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
-deb_include="acpid apache2 avahi-daemon \
-bash-completion bsdmainutils ca-certificates cpufrequtils dosfstools \
-fbset file git-core hdparm i2c-tools initramfs-tools linux-base \
-locales openssh-server patch \
-rsync sudo systemd usb-modeswitch usbutils wget udhcpd \
-\
-ntp unzip cdbs debhelper autotools-dev autoconf automake libtool pkg-config libsystemd-daemon-dev dh-systemd \
-php5 php5-json \
-owserver owhttpd bluez rrdtool"
-deb_exclude="aptitude aptitude-common"
+deb_include="	\
+	acpi-support-base	\
+	acpid	\
+	apache2	\
+	avahi-daemon	\
+	bash-completion	\
+	bsdmainutils	\
+	ca-certificates	\
+	cpufrequtils	\
+	device-tree-compiler	\
+	dosfstools	\
+	fbset	\
+	file	\
+	git-core	\
+	hdparm	\
+	i2c-tools	\
+	initramfs-tools	\
+	linux-base	\
+	locales	\
+	openssh-server	\
+	patch	\
+	rsync	\
+	sudo	\
+	systemd	\
+	udhcpd	\
+	usb-modeswitch	\
+	usbutils	\
+	wget	\
+	\
+	ntp	\
+	unzip	\
+	cdbs	\
+	debhelper	\
+	autotools-dev	\
+	autoconf	\
+	automake	\
+	libtool	\
+	pkg-config	\
+	libsystemd-daemon-dev	\
+	dh-systemd	\
+	php5	\
+	php5-json	\
+	owserver	\
+	owhttpd	\
+	bluez	\
+	rrdtool	\
+	python3-dev	\
+	python3-pip	\
+	python3-setuptools	\
+	python3-serial	\
+	libusb-1.0-0-dev	\
+"
+
+deb_exclude=""
 deb_components="main contrib non-free"
 deb_mirror=""
 ##
 ##Some packages fail to install via debootstrap: deb_additional_pkgs="<comma|space>"
 ##
-deb_additional_pkgs="lsb-release systemd-sysv \
-python3-dev python3-pip python3-setuptools python3-serial libusb-1.0-0-dev"
+deb_additional_pkgs="	\
+	bison	\
+	bmap-tools	\
+	build-essential	\
+	flex	\
+	lsb-release	\
+	make	\
+	pastebinit	\
+	python-dbus	\
+	systemd-sysv	\
+"
 
-######## bu: removed from base-image: python-dbus 
 ##
 rfs_username="smarthome"
 rfs_fullname="SmartHome User"
@@ -48,7 +100,7 @@ rfs_console_banner="\
   ##      ##      ##\n\
   ## ######  ######   Home-Automation Gateway\n\
 \n\
-Ingenieurbüro Budde 2015 (www.ing-budde.de)"
+Ingenieurbüro Budde 2015-2016 (www.ing-budde.de)"
 rfs_console_user_pass="enable"
 rfs_ssh_banner="\
   ## ######  ######\n\
@@ -59,14 +111,22 @@ rfs_ssh_banner="\
   ##      ##      ##\n\
   ## ######  ######   Home-Automation Gateway\n\
 \n\
-Ingenieurbüro Budde 2015 (www.ing-budde.de)"
+Ingenieurbüro Budde 2015-2016 (www.ing-budde.de)"
 rfs_ssh_user_pass="enable"
 ##
 ##enable kernel repo: http://repos.rcn-ee.net/(debian|ubuntu)
 repo_rcnee="enable"
-repo_rcnee_pkg_list="linux-image-4.1.13-ti-r30 \
-bb-customizations ipumm-dra7xx-installer vpdma-dra7xx-installer rcn-ee-archive-keyring tiomapconf"
-repo_rcnee_pkg_version="4.1.13-ti-r30"
+repo_rcnee_pkg_list="	\
+	bb-cape-overlays	\
+	bb-customizations	\
+	ipumm-dra7xx-installer	\
+	linux-image-4.4.9-ti-r25	\
+	rcn-ee-archive-keyring	\
+	tiomapconf	\
+	vpdma-dra7xx-installer	\
+"
+
+repo_rcnee_pkg_version="4.4.9-ti-r25"
 include_firmware="enable"
 #
 #rfs_kernel="http://www.ing-budde.de/downloads/kernel/"
