--- a/configs/ibb_gateway_debian_jessie_armhf.conf
+++ b/configs/ibb_gateway_debian_jessie_armhf.conf
@@ -1,5 +1,5 @@
 ##
-release="8.4"
+release="8.7"
 image_type="ibb"
 ##
 ##Debootstrap: https://wiki.debian.org/Debootstrap
@@ -11,75 +11,105 @@ image_type="ibb"
 deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
+#
 deb_include="	\
-	acpi-support-base	\
-	acpid	\
+	alsa-utils	\
+	at	\
 	apache2	\
+	apt-transport-https	\
+	autoconf	\
+	automake	\
 	avahi-daemon	\
 	bash-completion	\
-	bsdmainutils	\
+	bc	\
+	bison	\
+	bluetooth	\
+	build-essential	\
 	ca-certificates	\
+	can-utils	\
+	connman	\
 	cpufrequtils	\
-	device-tree-compiler	\
+	curl	\
+	debhelper	\
 	dosfstools	\
-	fbset	\
+	fakeroot	\
 	file	\
+	firmware-atheros	\
+	firmware-ralink	\
+	firmware-realtek	\
+	firmware-zd1211	\
+	flex	\
+	gdb	\
 	git-core	\
 	hdparm	\
+	hexedit	\
+	hostapd	\
+	htop	\
 	i2c-tools	\
+	info	\
 	initramfs-tools	\
+	iperf	\
+	iw	\
+	libncurses5-dev	\
+	libnss-mdns	\
+	libtool	\
+	libdbus-1-dev	\
+	libusb-1.0-0-dev	\
 	linux-base	\
 	locales	\
+	lshw	\
+	lsof	\
+	lzma	\
+	lzop	\
+	memtester	\
 	openssh-server	\
-	patch	\
+	pkg-config	\
+	ppp	\
+	rfkill	\
 	rsync	\
+	screen	\
+	ssl-cert	\
 	sudo	\
 	systemd	\
+	tmux	\
+	u-boot-tools	\
 	udhcpd	\
 	usb-modeswitch	\
 	usbutils	\
+	v4l-utils	\
+	vim	\
 	wget	\
-	\
-	ntp	\
-	unzip	\
-	cdbs	\
-	debhelper	\
-	autotools-dev	\
-	autoconf	\
-	automake	\
-	libtool	\
-	pkg-config	\
-	libsystemd-daemon-dev	\
-	dh-systemd	\
-	php5	\
-	php5-json	\
-	owserver	\
-	owhttpd	\
-	bluez	\
-	rrdtool	\
-	python3-dev	\
-	python3-pip	\
-	python3-setuptools	\
-	python3-serial	\
-	libusb-1.0-0-dev	\
+	wireless-tools	\
+	wpasupplicant	\
+	wvdial	\
 "
 
+#
 deb_exclude=""
+#
 deb_components="main contrib non-free"
 deb_mirror=""
 ##
 ##Some packages fail to install via debootstrap: deb_additional_pkgs="<comma|space>"
 ##
 deb_additional_pkgs="	\
-	bison	\
-	bmap-tools	\
-	build-essential	\
-	flex	\
 	lsb-release	\
-	make	\
 	pastebinit	\
-	python-dbus	\
-	systemd-sysv	\
+	\
+	ntp	\
+	unzip	\
+	cdbs	\
+	php5	\
+	php5-json	\
+	owserver	\
+	owhttpd	\
+	bluez	\
+	rrdtool	\
+	python3-dbus	\
+	python3-dev	\
+	python3-pip	\
+	python3-setuptools	\
+	python3-serial	\
 "
 
 ##
@@ -100,7 +130,7 @@ rfs_console_banner="\
   ##      ##      ##\n\
   ## ######  ######   Home-Automation Gateway\n\
 \n\
-Ingenieurbüro Budde 2015-2016 (www.ing-budde.de)"
+Ingenieurbüro Budde 2015-2017 (www.ing-budde.de)"
 rfs_console_user_pass="enable"
 rfs_ssh_banner="\
   ## ######  ######\n\
@@ -111,25 +141,38 @@ rfs_ssh_banner="\
   ##      ##      ##\n\
   ## ######  ######   Home-Automation Gateway\n\
 \n\
-Ingenieurbüro Budde 2015-2016 (www.ing-budde.de)"
+Ingenieurbüro Budde 2015-2017 (www.ing-budde.de)"
 rfs_ssh_user_pass="enable"
 ##
 ##enable kernel repo: http://repos.rcn-ee.net/(debian|ubuntu)
 repo_rcnee="enable"
 repo_rcnee_pkg_list="	\
+	am335x-pru-package	\
 	bb-cape-overlays	\
 	bb-customizations	\
-	ipumm-dra7xx-installer	\
-	linux-image-4.4.9-ti-r25	\
+	bb-wl18xx-firmware	\
+	device-tree-compiler	\
+	doc-beaglebone-getting-started	\
+	doc-beaglebonegreen-getting-started	\
+	doc-seeed-bbgw-getting-started	\
+	haveged	\
+	libsoc-dev	\
+	libsoc2	\
+	linux-image-4.9.10-ti-r23	\
+	mjpg-streamer	\
+	pru-software-support-package	\
 	rcn-ee-archive-keyring	\
+	roboticscape	\
+	ti-pru-cgt-installer	\
+	ti-wlconf	\
 	tiomapconf	\
-	vpdma-dra7xx-installer	\
+	upm \
 "
 
-repo_rcnee_pkg_version="4.4.9-ti-r25"
+##
+repo_rcnee_pkg_version="4.9.10-ti-r23"
 include_firmware="enable"
 #
-#rfs_kernel="http://www.ing-budde.de/downloads/kernel/"
 chroot_COPY_SETUP_SDCARD="enable"
 chroot_before_hook=""
 chroot_after_hook=""
