last changes for new release

--- a/configs/ibb_gateway_debian_jessie_armhf.conf
+++ b/configs/ibb_gateway_debian_jessie_armhf.conf
@@ -110,6 +110,13 @@ deb_additional_pkgs="	\
 	python3-pip	\
 	python3-setuptools	\
 	python3-serial	\
+	libsystemd-dev	\
+	g++	\
+	make	\
+	gcc	\
+	dh-systemd	\
+	base-files	\
+	libev-dev	\
 "
 
 ##
