further changes for new release

--- a/configs/ibb_gateway_debian_jessie_armhf.conf
+++ b/configs/ibb_gateway_debian_jessie_armhf.conf
@@ -11,90 +11,75 @@ image_type="ibb"
 deb_distribution="debian"
 deb_codename="jessie"
 deb_arch="armhf"
-#
 deb_include="	\
+	acpi-support-base	\
+	acpid	\
 	alsa-utils	\
-	at	\
 	apache2	\
-	apt-transport-https	\
-	autoconf	\
-	automake	\
-	avahi-daemon	\
+	avahi-utils	\
 	bash-completion	\
-	bc	\
-	bison	\
-	bluetooth	\
-	build-essential	\
+	bsdmainutils	\
 	ca-certificates	\
-	can-utils	\
-	connman	\
 	cpufrequtils	\
-	curl	\
-	debhelper	\
+	crda	\
+	device-tree-compiler	\
+	dnsmasq	\
 	dosfstools	\
-	fakeroot	\
+	fbset	\
 	file	\
 	firmware-atheros	\
+	firmware-brcm80211	\
+	firmware-libertas	\
 	firmware-ralink	\
 	firmware-realtek	\
+	firmware-ti-connectivity	\
 	firmware-zd1211	\
-	flex	\
-	gdb	\
 	git-core	\
 	hdparm	\
 	hexedit	\
 	hostapd	\
-	htop	\
 	i2c-tools	\
-	info	\
 	initramfs-tools	\
-	iperf	\
-	iw	\
-	libncurses5-dev	\
-	libnss-mdns	\
-	libtool	\
-	libdbus-1-dev	\
-	libusb-1.0-0-dev	\
+	iw \
 	linux-base	\
 	locales	\
+	lowpan-tools	\
 	lshw	\
-	lsof	\
-	lzma	\
-	lzop	\
 	memtester	\
+	nano	\
 	openssh-server	\
-	pkg-config	\
+	patch	\
 	ppp	\
+	read-edid	\
 	rfkill	\
 	rsync	\
-	screen	\
-	ssl-cert	\
 	sudo	\
 	systemd	\
-	tmux	\
-	u-boot-tools	\
 	udhcpd	\
 	usb-modeswitch	\
 	usbutils	\
-	v4l-utils	\
-	vim	\
 	wget	\
+	wireless-regdb	\
 	wireless-tools	\
 	wpasupplicant	\
 	wvdial	\
 "
 
-#
 deb_exclude=""
-#
 deb_components="main contrib non-free"
 deb_mirror=""
 ##
 ##Some packages fail to install via debootstrap: deb_additional_pkgs="<comma|space>"
 ##
 deb_additional_pkgs="	\
+	bison	\
+	build-essential	\
+	flex	\
 	lsb-release	\
+	make	\
 	pastebinit	\
+	python-dbus	\
+	systemd-sysv	\
 	\
 	ntp	\
 	unzip	\
@@ -110,13 +95,16 @@ deb_additional_pkgs="	\
 	python3-pip	\
 	python3-setuptools	\
 	python3-serial	\
+	python3-dateutil	\
+	python3-psutil  \
 	libsystemd-dev	\
 	g++	\
-	make	\
 	gcc	\
 	dh-systemd	\
 	base-files	\
+	libusb-1.0-0-dev	\
 	libev-dev	\
+	pkg-config	\
 "
 
 ##
@@ -154,30 +142,16 @@ rfs_ssh_user_pass="enable"
 ##enable kernel repo: http://repos.rcn-ee.net/(debian|ubuntu)
 repo_rcnee="enable"
 repo_rcnee_pkg_list="	\
-	am335x-pru-package	\
 	bb-cape-overlays	\
 	bb-customizations	\
 	bb-wl18xx-firmware	\
-	device-tree-compiler	\
-	doc-beaglebone-getting-started	\
-	doc-beaglebonegreen-getting-started	\
-	doc-seeed-bbgw-getting-started	\
-	haveged	\
-	libsoc-dev	\
-	libsoc2	\
-	linux-image-4.9.10-ti-r23	\
-	mjpg-streamer	\
-	pru-software-support-package	\
+	connman	\
+	linux-image-4.4.54-ti-r93	\
 	rcn-ee-archive-keyring	\
-	roboticscape	\
-	ti-pru-cgt-installer	\
-	ti-wlconf	\
 	tiomapconf	\
-	upm \
 "
 
-##
-repo_rcnee_pkg_version="4.9.10-ti-r23"
+repo_rcnee_pkg_version="4.4.54-ti-r93"
 include_firmware="enable"
 #
 chroot_COPY_SETUP_SDCARD="enable"
@@ -186,4 +160,3 @@ chroot_after_hook=""
 chroot_script="ibb.sh"
 chroot_post_uenv_txt=""
 chroot_tarball="enable"
-
